tests/org.eclipse.php.core.tests/src/org/eclipse/php/core/tests/errors/MarkerComparator#compare(IMarker,IMarker).mjava
	@Override
	public int compare(IMarker o1, IMarker o2) {
		int res = compareInt(o1.getAttribute(IMarker.LINE_NUMBER, -1),
				o2.getAttribute(IMarker.LINE_NUMBER, -1));
		if (res == 0) {
			res = compareInt(o1.getAttribute(IMarker.CHAR_START, -1),
					o2.getAttribute(IMarker.CHAR_START, -1));
			if (res == 0) {
				res = compareInt(o1.getAttribute(IMarker.CHAR_END, -1),
						o2.getAttribute(IMarker.CHAR_END, -1));
			}
		}

		return res;
	}

